--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -10,21 +7,53 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  # Job 1: Checkout the code
+  checkout:
     runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Get runner IP address
+      run: curl -s https://api.ipify.org
+      id: get_ip
+
+    - name: Log runner IP address
+      run: echo "Runner IP: ${{ steps.get_ip.outputs.ip }}"
+
+  # Job 2: Build the code
+  build:
+    runs-on: ubuntu-latest
+
+    needs: checkout
 
     strategy:
       matrix:
         node-version: [v19.9.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
     - run: npm install
-    - run: npm start
+    - run: npm run build --if-present
+
+  # Job 3: Deploy the application
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Deploy application
+      run: npm start
