--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,53 +7,21 @@ on:
     branches: [ master ]
 
 jobs:
-  # Job 1: Checkout the code
-  checkout:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Get runner IP address
-      run: curl -s https://api.ipify.org
-      id: get_ip
-
-    - name: Log runner IP address
-      run: echo "Runner IP: ${{ steps.get_ip.outputs.ip }}"
-
-  # Job 2: Build the code
   build:
-    runs-on: ubuntu-latest
 
-    needs: checkout
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [v19.9.0]
+        node-version: [19.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-
     - run: npm install
-    - run: npm run build --if-present
-
-  # Job 3: Deploy the application
-  deploy:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Deploy application
-      run: npm start
+    - run: npm start
